# agedap-medical

./: .gitignore  README.md  key_auth_config.ini  pyproject.toml  test.py
patient_app/: README.md  fhir_test.py  pyproject.toml
patient_app/src/: api_utils.py  app_config.py  app_init.py  client.py  client_test.py  db_utils.py  dynamic_mapper.py  fhir_utils.py  main.py  navigation.py  omop_utils.py
patient_app/src/api_client/: base_client.py  breast_cancer_screening_client.py  diabetes_classification_client.py  key_manager.py
patient_app/src/api_clients/: breast_cancer_screening_client.py  diabetes_classification_client.py
patient_app/src/db/: __init__.py  config.py  database.py  db_init.py  init_db.py  omop_cdm.db  omop_initializer.py  test_data.py
patient_app/tests/: fhir_test.py  test_db_access.py
provider/: README.md  api_server.py  base_service.py  breast_cancer_screening.py  diabetes_classification.py  model_api.py  start_all.py  train.py  train_breast_cancer.py  train_diabetes_classification.py  training_config.yaml
provider/services/: base_service.py  breast_cancer_screening_server.py  diabetes_classification.py  diabetes_classification_server.py  diabetes_health_indicators_classification_server.py  key_manager.py
standard_definitions/: terminology_definitions.py
tests/: conftest.py  test_project_structure.py
tests/patient_app/: test_app_config.py  test_app_init.py  test_database.py  test_fhir.py  test_main.py
tests/provider/: test_start_all.py  test_train.py
tests/standard_definitions/: test_terminology_definitions.py
(+28 files in other folders)
